--- a/app/design/frontend/foundation/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view.phtml
@@ -53,7 +53,7 @@ if (!function_exists('clean')) {
                         <picture>
                             <source srcset="<?php echo $this->getSkinUrl('dist/assets/img/umweltpraemie-700x425px.webp', array('_secure'=>true)) ?>" type="image/webp">
                             <source srcset="<?php echo $this->getSkinUrl('dist/assets/img/umweltpraemie-700x425px.jpg', array('_secure'=>true)) ?>" type="image/jpeg">
-                            <img class="float-center" src="<?php echo $this->getSkinUrl('dist/assets/img/umweltpraemie-700x425px.jpg', array('_secure'=>true)) ?>" alt="Umweltprämie Banner">
+                            <img class="float-center lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/umweltpraemie-700x425px.jpg', array('_secure'=>true)) ?>" alt="Umweltprämie Banner">
                         </picture>
                     </div>
                 <?php endif; ?>
@@ -81,7 +81,7 @@ if (!function_exists('clean')) {
                             <div class="product-brand">
                                 <?php $brand = $_product->getAttributeText('manufacturer') ?>
                                 <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB) . 'hersteller/' . clean($brand) ?>">
-                                    <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean($brand) ?>.png"
+                                    <img class="lazy" data-src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean($brand) ?>.png"
                                          alt="<?php echo $brand ?> Logo"
                                          title="<?php echo $this->__('Zeige alle Artikel von %s', $brand) ?>">
                                 </a>
