--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -9,17 +9,17 @@
     <div class="footer-extras">
         <div class="content">
             <a href="<?php echo Mage::getUrl('', array('_direct' => 'lieferung')); ?>">
-                <img src="<?php echo $this->getSkinUrl('dist/assets/img/versandkostenfrei.png') ?>"
+                <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/versandkostenfrei.png') ?>"
                      alt="kostenfreie Lieferung ab 99 EUR">
             </a>
-            <img src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
-                 alt="Logo" class="footer-logo"/>
+            <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
+                 alt="Logo" class="footer-logo" width="240"/>
             <a href="https://www.newgastroline.de" target="_blank">
-                <img src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
-                     alt="30 Jahre New Gastroline GmbH">
+                <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
+                     alt="30 Jahre New Gastroline GmbH" width="80">
             </a>
             <a href="<?php echo Mage::getUrl('', array('_direct' => 'jobs')); ?>">
-                <img src="<?php echo $this->getSkinUrl('dist/assets/img/jobs.png') ?>"
+                <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/jobs.png') ?>"
                      alt="Jobs &amp; Careers">
             </a>
         </div>
@@ -194,49 +194,49 @@
             <ul>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#paypal')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
                              alt="PayPal Logo"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#amazon')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/amazon-payments-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/amazon-payments-white.png') ?>"
                              alt="Amazon payments"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sofort')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/sofort-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/sofort-white.png') ?>"
                              alt="Sofortüberweisung Logo"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#moneyorder')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
                              alt="Vorkasse"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#creditcard')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
                              alt="Kreditkarte"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#invoice')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
                              alt="Rechnung"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#finanz')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
                              alt="Finanzierung"/>
                     </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sepa')); ?>">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
                              alt="Sepa Lastschrift"/>
                     </a>
                 </li>
