--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -40,7 +40,7 @@
                 <li class="quality-since">since 1990 <span>best quality</span></li>
                 <li>
                     <a class="tuvsudmodal">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/safer-shopping.png'); ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/safer-shopping.png'); ?>"
                              alt="TÜV Süd s@fer shopping"/>
                     </a>
                 </li>
@@ -48,13 +48,13 @@
                 <li>
                     <a href="https://www.trustedshops.eu/buyerrating/info_X6B5E9287FD5871CE74DA1B1775EB2D64.html"
                        target="_blank" rel="nofollow noopener noreferrer">
-                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/trusted-shops.png'); ?>"
+                        <img class="lazy" data-src="<?php echo $this->getSkinUrl('dist/assets/img/trusted-shops.png'); ?>"
                              alt="Trusted Shops"/>
                     </a>
                 </li>
                 <li class="shipping">
                     <a href="<?php echo Mage::getUrl('') . 'lieferung'; ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
+                        <img class="lazy" data-src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
                              alt="kostenfreie Lieferung ab 99 EUR">
                     </a>
                 </li>
@@ -64,8 +64,7 @@
             <?php echo $this->getChildHtml('topSearch') ?>
         </div>
         <div class="hotline">
-            <a href="tel:+498004566000"><i class="fas fa-phone"></i> 0800 456 6000
-                <span>Bestell- und Beratungshotline</span></a>
+            <a href="tel:+498004566000"><i class="fas fa-phone"></i> 0800 456 6000 <span>Bestell- und Beratungshotline</span></a>
         </div>
     </div>
     <div class="header-bottom">
