--- a/app/design/frontend/foundation/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/media.phtml
@@ -43,7 +43,7 @@ $_helper = $this->helper('catalog/output');
         <div class="special-ribbon"><span><?php echo $_savingPercent; ?><?php echo $this->__('% Rabatt') ?></span></div>
     <?php } ?>
     <a href="<?php echo $this->helper('catalog/image')->init($_product, 'image') ?>" class="item">
-        <img data-interchange="[<?php echo $this->helper('catalog/image')->init($_product, 'image')->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(250, 250) ?>, small], [<?php echo $this->helper('catalog/image')->init($_product, 'image')->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(400, 400) ?>, medium], [<?php echo $this->helper('catalog/image')->init($_product, 'image')->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(550, 550) ?>, large]"
+        <img class="lazy" data-src="<?php echo $this->helper('catalog/image')->init($_product, 'image')->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(500, 500) ?>"
              alt="<?php echo $this->escapeHtml($this->getImageLabel()) ?>"
              title="<?php echo $this->escapeHtml($this->getImageLabel()); ?>"/>
     </a>
@@ -70,7 +70,7 @@ $_helper = $this->helper('catalog/output');
                     <li>
                         <a href="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()); ?>"
                            title="<?php echo $this->htmlEscape($_image->getLabel()) ?>" class="item">
-                            <img data-interchange="[<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile())->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(80, 80); ?>, small], [<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile())->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(120, 120); ?>, large]"
+                            <img class="lazy" data-src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile())->constrainOnly(false)->keepAspectRatio(true)->keepFrame(true)->resize(120, 120); ?>"
                                  alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>"
                                  title="<?php echo $this->htmlEscape($_image->getLabel()) ?>"/>
                         </a>
