add width attribute to category_images for lazy load - crossbrowser

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -7,7 +7,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                title="JURA Shop">
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/jurashop.jpg'); ?>"
-                     alt="JURA Shop"/>
+                     alt="JURA Shop"
+                     width="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/jura'; ?>"
@@ -21,7 +22,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                title="Bartscher Shop">
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/bartscher-shop.png'); ?>"
-                     alt="Bartscher Shop"/>
+                     alt="Bartscher Shop"
+                     width="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/bartscher'; ?>"
@@ -35,7 +37,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                title="Aliseo Shop">
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/aliseo-profishop.png'); ?>"
-                     alt="Aliseo Shop"/>
+                     alt="Aliseo Shop"
+                     width="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/aliseo'; ?>"
@@ -49,7 +52,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                title="PacoJet Spezial">
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/pacojet.jpg'); ?>"
-                     alt="PacoJet Spezial"/>
+                     alt="PacoJet Spezial"
+                     width="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/pacojet'; ?>"
@@ -63,7 +67,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                title="Hugentobler Spezial">
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/holdomat.jpg'); ?>"
-                     alt="Hugentobler Spezial"/>
+                     alt="Hugentobler Spezial"
+                     width="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
@@ -86,9 +91,10 @@ $_categories = $this->getCurrentChildCategories(); ?>
                         <a href="<?php echo $_category->getURL() ?>"
                            title="<?php echo $this->htmlEscape($_category->getName()) ?>">
                             <img class="lazy"
-                                 data-src="<?php echo $_category->getCategoryImage(250, 250) ?>"
+                                 data-src="<?php echo $_category->getCategoryImage(200, 200) ?>"
                                  alt="<?php echo $this->htmlEscape($_category->getName()) ?>"
-                                 title="<?php echo $title ?>"/>
+                                 title="<?php echo $title ?>"
+                                 width="200" />
                         </a>
                     <?php endif; ?>
                     <h2 class="category-name">
@@ -106,7 +112,8 @@ $_categories = $this->getCurrentChildCategories(); ?>
                title="Umweltprämie & Abwrackprämie">
                 <img class="lazy"
                      data-src="<?php echo $this->getSkinUrl('dist/assets/img/abwrackpraemie-400x400.jpg'); ?>"
-                     alt="Umweltprämie & Abwrackprämie"/>
+                     alt="Umweltprämie & Abwrackprämie"
+                     width="200" />
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'altgeraeteentsorgung'; ?>"
