--- a/app/design/frontend/foundation/default/template/catalog/navigation/manu-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/manu-category.phtml
@@ -11,7 +11,9 @@ $_manufacturers = $this->getCurrentChildCategories(); ?>
                        title="<?php echo $this->htmlEscape($_manufacturer->getName()) ?>">
                         <?php if ($_imageUrl = $_manufacturer->getImageUrl()) : ?>
                             <img class="lazy"
-                                 data-src="<?php echo $_imageUrl; ?>" alt="<?php echo $this->htmlEscape($_manufacturer->getName()) ?>"/>
+                                 data-src="<?php echo $_imageUrl; ?>" alt="<?php echo $this->htmlEscape($_manufacturer->getName()) ?>"
+                                 title="<?php echo $this->htmlEscape($_manufacturer->getName()) ?>"
+                                 width="200" />
                         <?php endif; ?>
                     </a>
                     <div class="category-name">
